// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Component) Slider snapshots should create the right snapshot for decimals and steps specified 1`] = `
<Slider
  decimals={2}
  max={10}
  min={1}
  minDistance={10}
  minRange={1}
  mouseThreshold={50}
  multiple={true}
  prefix=""
  step={0.5}
  suffix=""
  template=""
  values={Array []}
>
  <span>
    <span
      style={
        Object {
          "left": "0%",
          "width": "100%",
        }
      }
    />
    <span>
      <span />
    </span>
    <span>
      <span
        data-name="min"
        key="min"
        onMouseDown={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "left": "undefined%",
          }
        }
        tabIndex={1}
      />
      <input
        key="hidden-min"
        type="hidden"
        value={
          Object {
            "input": undefined,
            "range": 1,
            "value": NaN,
          }
        }
      />
      <span
        data-name="max"
        key="max"
        onMouseDown={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "left": "undefined%",
          }
        }
        tabIndex={1}
      />
      <input
        key="hidden-max"
        type="hidden"
        value={
          Object {
            "input": undefined,
            "range": 10,
            "value": NaN,
          }
        }
      />
    </span>
  </span>
</Slider>
`;

exports[`(Component) Slider snapshots should create the right snapshot for decimals and steps specified 2`] = `
<Slider
  decimals={2}
  max={10}
  min={1}
  minDistance={10}
  minRange={1}
  mouseThreshold={50}
  multiple={true}
  name={
    Array [
      "pe",
      "ps",
    ]
  }
  prefix=""
  step={0.5}
  suffix=""
  template=""
  values={Array []}
>
  <span>
    <span
      style={
        Object {
          "left": "0%",
          "width": "100%",
        }
      }
    />
    <span>
      <span />
    </span>
    <span>
      <span
        data-name="min"
        key="min"
        onMouseDown={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "left": "undefined%",
          }
        }
        tabIndex={1}
      />
      <input
        key="hidden-min"
        name="pe"
        type="hidden"
        value={
          Object {
            "input": "pe",
            "range": 1,
            "value": NaN,
          }
        }
      />
      <span
        data-name="max"
        key="max"
        onMouseDown={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "left": "undefined%",
          }
        }
        tabIndex={1}
      />
      <input
        key="hidden-max"
        name="ps"
        type="hidden"
        value={
          Object {
            "input": "ps",
            "range": 10,
            "value": NaN,
          }
        }
      />
    </span>
  </span>
</Slider>
`;

exports[`(Component) Slider snapshots should create the right snapshot for multiple thumbs 1`] = `
<Slider
  max={1500}
  min={500}
  minDistance={10}
  minRange={100}
  mouseThreshold={50}
  multiple={true}
  prefix=""
  step={250}
  suffix=""
  template=""
  values={Array []}
>
  <span>
    <span
      style={
        Object {
          "left": "0%",
          "width": "100%",
        }
      }
    />
    <span>
      <span />
    </span>
    <span>
      <span
        data-name="min"
        key="min"
        onMouseDown={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "left": "undefined%",
          }
        }
        tabIndex={1}
      />
      <input
        key="hidden-min"
        type="hidden"
        value={
          Object {
            "input": undefined,
            "range": 500,
            "value": NaN,
          }
        }
      />
      <span
        data-name="max"
        key="max"
        onMouseDown={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "left": "undefined%",
          }
        }
        tabIndex={1}
      />
      <input
        key="hidden-max"
        type="hidden"
        value={
          Object {
            "input": undefined,
            "range": 1500,
            "value": NaN,
          }
        }
      />
    </span>
  </span>
</Slider>
`;

exports[`(Component) Slider snapshots should create the right snapshot for single thumb 1`] = `
<Slider
  max={1500}
  min={500}
  minDistance={10}
  minRange={100}
  mouseThreshold={50}
  prefix=""
  step={250}
  suffix=""
  template=""
  values={Array []}
>
  <span>
    <span
      style={
        Object {
          "left": 0,
          "marginLeft": 0,
          "width": "0%",
        }
      }
    />
    <span>
      <span />
    </span>
    <span>
      <span
        data-name="min"
        key="min"
        onMouseDown={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "left": "undefined%",
          }
        }
        tabIndex={1}
      />
      <input
        key="hidden-min"
        type="hidden"
        value={
          Object {
            "input": undefined,
            "range": 500,
            "value": NaN,
          }
        }
      />
    </span>
  </span>
</Slider>
`;
